the tic bootcamp repos

--- a/assignments/nft-preview-card-component-main/style.css
+++ b/assignments/nft-preview-card-component-main/style.css
@@ -54,7 +54,7 @@ body {
   justify-content: space-between;
   margin: 15px 0;
 }
-
+/* eth */
 .eth__desc > p {
   display: flex;
   align-items: center;
